# mlflow-infrastructure

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  azure-pipelines.yml  push.sh
.github/workflows/: bump-version.yml  check-mlflow-release.yml  chekck-mlflow-release.yml  docker-build.yml
infrastructure/: .artifactignore  backend.tf  main.tf  output.tf  plan.tfplan  variables.tf  versions.tf
kubernetes/: README.md  deployment.yaml  ingress.yaml  service.yaml
mlflow/: Chart.yaml  values.yaml
mlflow-chart/: Chart.yaml  values.yaml
mlflow-chart/templates/: _helpers.tpl  deployment.yaml
mlflow-image/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
mlflow-terraform/: README.md  main.tf  output.tf  plan.tfplan  variables.tf  versions.tf
mlflow/templates/: deployment.yaml
